@@ -1,3 +1,7 @@
+2012-02-03  Rafaël Carré  <funman@videolan.org>
+
+	* shobjidl.h (ApplicationAssociationRegistrationUI): Add missing interface
+
 2012-02-02  Rafaël Carré  <funman@videolan.org>
 
 	* uuids.h (MEDIASUBTYPE_I420): Add GUID.
